http://www.nsnam.org including tutorials: http://www.nsnam.org/tutorials.html

Consult the file CHANGES.html for more detailed information about changed
API and behavior across ns-3 releases.

Release 3-dev
=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------

Bugs fixed
----------
- Bug 1991 - PcapFileWrapper::CaptureSize attribute (snaplen) has no effect.

Known issues
------------

Release 3.21
============

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.21.tar.bz2

Supported platforms
-------------------
- Fedora Core 20 (32/64 bit) with g++-4.8.2
- Ubuntu 14.04 (32/64 bit) with g++-4.8.2
- Ubuntu 12.04.4 (64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- CentOS/RHEL 6.5 (64-bit) with g++-4.4.7
- OS X Mavericks 10.9 with Xcode 5.1.1 and clang-503.0.40
- FreeBSD 9.2-RELEASE (64 bit) with clang-3.3

New user-visible features
-------------------------

- The LTE module now supports the transport of the S1-U, X2-U and X2-C
  interfaces over emulated links via the new helper class EmuEpcHelper.
- CommandLine can now provide a shorthand argument name for any
  Attribute.
- Implemented support for Frequency Reuse algorithms in LTE module, as the 
  outcome of GSoC 2014 project. 
  The project also includes several sub-features, such as:
   - implementation of Downlink Power Control
   - implementation of Uplink Power Control
   - new DL-CQI generation approach, which increases throughput if FR algorithms 
     are used
   - seven options of Frequency Reuse algorithms: LteFrNoOpAlgorithm, 
     LteFrHardAlgorithm, LteFrStrictAlgorithm, LteFrSoftAlgorithm, 
     LteFfrSoftAlgorithm, LteFfrEnhancedAlgorithm, LteFfrDistributedAlgorithm
   - updated RadioEnvironmentMapHelper. Now RadioEnvironmentMap can be generated 